Migrate to bundle structure

--- a/lib/Resources/views/stab/show.html.twig
+++ b/lib/Resources/views/stab/show.html.twig
@@ -70,5 +70,5 @@
         edit
     </a>
 
-    {{ include('stab/_delete_form.html.twig') }}
+    {{ include('@MazariniSymfoTab/stab/_delete_form.html.twig') }}
 {% endblock %}
