--- a/lib/Resources/views/stab/edit.html.twig
+++ b/lib/Resources/views/stab/edit.html.twig
@@ -1,19 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}
+{% block main_top %}
     Edit Stab
 {% endblock %}
 
-{% block body %}
-    <h1>
-        Edit Stab
-    </h1>
-
-    {{ include('@MazariniSymfoTab/stab/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('stab_index') }}">
-        back to list
-    </a>
-
-    {{ include('@MazariniSymfoTab/stab/_delete_form.html.twig') }}
+{% block main_content %}
+    {% embed "@MazariniSymfoTab/stab/_form.html.twig" with {'form': form, 'id': stab.id, 'action': 'edit' } %}
+        {% block body %}
+            {% embed "@MazariniSymfoTab/stab/_button.html.twig" with {'id': 0, 'action': action } %}
+            {% endembed %}
+        {% endblock %}
+    {% endembed %}
+    {% include "@MazariniSymfoTab/stab/_delete_form.html.twig" %}
 {% endblock %}
