--- a/lib/Resources/views/stab/show.html.twig
+++ b/lib/Resources/views/stab/show.html.twig
@@ -1,74 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}
-    Stab
+{% block main_top %}
+    show Stab
 {% endblock %}
 
-{% block body %}
-    <h1>
-        Stab
-    </h1>
-
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>
-                    Id
-                </th>
-                <td>
-                    {{ stab.id }}
-                </td>
-            </tr>
-            <tr>
-                <th>
-                    TabName
-                </th>
-                <td>
-                    {{ stab.tabName }}
-                </td>
-            </tr>
-            <tr>
-                <th>
-                    TabKey
-                </th>
-                <td>
-                    {{ stab.tabKey }}
-                </td>
-            </tr>
-            <tr>
-                <th>
-                    TabData
-                </th>
-                <td>
-                    {{ stab.tabData ? stab.tabData|json_encode : '' }}
-                </td>
-            </tr>
-            <tr>
-                <th>
-                    CreatedAt
-                </th>
-                <td>
-                    {{ stab.createdAt ? stab.createdAt|date('Y-m-d H:i:s') : '' }}
-                </td>
-            </tr>
-            <tr>
-                <th>
-                    UpdateBy
-                </th>
-                <td>
-                    {{ stab.updateBy ? stab.updateBy|date('Y-m-d H:i:s') : '' }}
-                </td>
-            </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('stab_index') }}">
-        back to list
-    </a>
-
-    <a href="{{ path('stab_edit', {'id': stab.id}) }}">
-        edit
-    </a>
-
+{% block main_content %}
+    {{ include("@MazariniSymfoTab/stab/_display.html.twig") }}
+    {% embed "@MazariniSymfoTab/stab/_button.html.twig" with {'id': stab.id, 'action': 'show' } %}
+    {% endembed %}
     {{ include('@MazariniSymfoTab/stab/_delete_form.html.twig') }}
 {% endblock %}
