--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,25 +1,50 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
     <head>
-        <meta charset="UTF-8">
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>
             {% block title %}
-                Mazarini SynfoTAB
+                Mazarini SymfoTAB
             {% endblock %}
         </title>
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
+        <style>
+            .wrapper
+            {
+                background: #F5F5F5;
+                font      : 18px / 1.5 sans-serif;
+                margin    : 1em auto;
+                max-width : 800px;
+                padding   : 2px 6px;
+                width     : 95%;
+            }
+        </style>
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
     </head>
     <body>
-        {% block body %}
-        {% endblock %}
+        <div class="wrapper">
+            {% block body %}
+                <h1>
+                    {% block header %}
+                        <a href="{{ path('homepage') }}">
+                            <i class="fa-solid fa-house-blank"/>
+                            Bundle Mazarini\Symfotab
+                        </a>
+                    {% endblock %}
+                </h1>
+                {% block main %}
+                    <h2>
+                        {% block main_top %}
+                        {% endblock %}
+                    </h2>
+                    {% block main_content %}
+                    {% endblock %}
+                {% endblock %}
+            {% endblock %}
+        </body>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
