--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main_content %}
-    <a href="{{ path('stab_index') }}">
+    <a href="{{ path('item_index') }}">
         <i class="fa-solid fa-house-blank"/>
         Start tests
     </a>
