Move index from all table to one table

--- a/lib/Resources/views/item/_form.html.twig
+++ b/lib/Resources/views/item/_form.html.twig
@@ -1,5 +1,5 @@
 {{ form_start(form) }}
 {{ form_widget(form) }}
-{% embed "@MazariniSymfoTab/item/_button.html.twig" with {'id': id, 'action': action } %}
+{% embed "@MazariniSymfoTab/item/_button.html.twig" with {'id': id, 'action': action, 'tableName': item.tableName } %}
 {% endembed %}
 {{ form_end(form) }}
