--- a/lib/Resources/views/item/_button.html.twig
+++ b/lib/Resources/views/item/_button.html.twig
@@ -1,5 +1,5 @@
 {% if action in ['index', 'show'] %}
-    <a class="btn btn-primary" href="{{ path('item_new') }}" role="button">
+    <a class="btn btn-primary" href="{{ path('item_new',{'tableName': tableName}) }}" role="button">
         Create
     </a>
 {% endif %}
@@ -9,17 +9,17 @@
     </button>
 {% endif %}
 {% if action in ['new', 'edit', 'show'] %}
-    <a class="btn btn-primary" href="{{ path('item_index') }}" role="button">
+    <a class="btn btn-primary" href="{{ path('item_index', { 'tableName': tableName }) }}" role="button">
         Back
     </a>
 {% endif %}
 {% if action in ['show'] %}
-    <a class="btn btn-primary" href="{{ path('item_edit', {'id': id}) }}" role="button">
+    <a class="btn btn-primary" href="{{ path('item_edit', {'tableName': tableName, 'id': id}) }}" role="button">
         edit
     </a>
 {% endif %}
 {% if action in ['edit'] %}
-    <a class="btn btn-primary" href="{{ path('item_show', {'id': id}) }}" role="button">
+    <a class="btn btn-primary" href="{{ path('item_show', {'tableName': tableName, 'id': id}) }}" role="button">
         view
     </a>
 {% endif %}
