--- a/lib/Resources/views/item/new.html.twig
+++ b/lib/Resources/views/item/new.html.twig
@@ -5,9 +5,9 @@
 {% endblock %}
 
 {% block main_content %}
-    {% embed "@MazariniSymfoTab/item/_form.html.twig" with {'form': form, 'id': 0, 'action': 'new' } %}
+    {% embed "@MazariniSymfoTab/item/_form.html.twig" with {'form': form, 'id': 0, 'action': 'new', 'tableName': item.tableName } %}
         {% block body %}
-            {% embed "@MazariniSymfoTab/item/_button.html.twig" with {'id': 0, 'action': action } %}
+            {% embed "@MazariniSymfoTab/item/_button.html.twig" with {'action': action, 'tableName': tableName, 'id': 0 } %}
             {% endembed %}
         {% endblock %}
     {% endembed %}
