--- a/lib/Resources/views/item/show.html.twig
+++ b/lib/Resources/views/item/show.html.twig
@@ -6,7 +6,7 @@
 
 {% block main_content %}
     {{ include("@MazariniSymfoTab/item/_display.html.twig") }}
-    {% embed "@MazariniSymfoTab/item/_button.html.twig" with {'id': item.id, 'action': 'show' } %}
+    {% embed "@MazariniSymfoTab/item/_button.html.twig" with {'tableName': item.tableName, 'id': item.id, 'action': 'show' } %}
     {% endembed %}
     {{ include('@MazariniSymfoTab/item/_delete_form.html.twig') }}
 {% endblock %}
